--- a/content/content.tex
+++ b/content/content.tex
@@ -1,3 +1,14 @@
 \section{Introduction}
 
-The introduction to the thesis.
+The main goal is to get control over the finger print of the browser.
+Having that control will allow us
+to study the effect of different finger prints
+on the act of finger printing.
+The act of finger printing uses the finger print
+to track a specific user
+and possibly serve specific content to that user
+based on the tracking data.
+When we have control over the finger print the web server \emph{sees}
+when we visit a website,
+we can study if and how the content of that website changes
+based on differences in the finger print we \emph{serve}.
