Changed spelling from finger print to fingerprint

--- a/front-back/title.tex
+++ b/front-back/title.tex
@@ -1,4 +1,4 @@
-\title{Finger Print -- Preparation}
+\title{Fingerprint -- Preparation}
 \author{
   Boris Arkenaar\\
   Naarden, the Netherlands, 850657210\\
@@ -13,4 +13,3 @@
   faculteit Management, Science \& Technology}
 \date{\today\\v0.1}
 \maketitle
-
