Added article references on controlling the fingerprint.

--- a/content/content.tex
+++ b/content/content.tex
@@ -24,3 +24,13 @@ All the characteristics not explicitly provided
 should still be generated in a random fashion,
 but the resulting fingerprint
 should be a plausible combination of characteristics.
+
+Baumann et al. use correct fingerprints to replace the original one.
+\citep{baumann2016disguised}
+They do this by storing the fingerprints
+of every user of their created browser
+on a server and using these \emph{real} fingerprints to substitute others.
+With FP-Block fingerprints are really generated.
+\citep{torres2015fp-block:}
+By making use of Markov chains they make sure
+that each generated fingerprint is a plausible one.
