Added possible study on airline ticket prices

--- a/content/content.tex
+++ b/content/content.tex
@@ -34,3 +34,16 @@ With FP-Block fingerprints are really generated.
 \citep{torres2015fp-block:}
 By making use of Markov chains they make sure
 that each generated fingerprint is a plausible one.
+
+\section{Possible studies}
+
+\subsection{Price discrimination airline tickets}
+
+It would be interesting to see if airlines use price discrimination
+on their tickets sold online based on the fingerprint of the visitor.
+When that is the case we would like to know
+how the price differs and based on which values of a fingerprint.
+A similar study has been performed recently however,
+with the conclusion that no price discrimination was being applied
+by any of the airlines included in the study.
+\citep{vissers2014crying}
