Added malvertisement study question

--- a/content/content.tex
+++ b/content/content.tex
@@ -47,3 +47,9 @@ A similar study has been performed recently however,
 with the conclusion that no price discrimination was being applied
 by any of the airlines included in the study.
 \citep{vissers2014crying}
+
+\subsection{Malvertisement}
+
+Would malvertisement be mainly directed toward
+fingerprints conaining certain characteristics
+indicating they would be more vulnerable to an attack?
