Added reference to malvertisement article

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,17 +1,185 @@
 
-@inproceedings{juarez2016efficient,
-  title = {Toward an {{Efficient Website Fingerprinting Defense}}},
-  url = {http://link.springer.com.ezproxy.elib10.ub.unimaas.nl/chapter/10.1007/978-3-319-45744-4_2},
-  eventtitle = {European Symposium on Research in Computer Security},
-  timestamp = {2017-02-24T11:24:27Z},
-  langid = {english},
-  booktitle = {Computer {{Security}} – {{ESORICS}} 2016},
-  publisher = {{Springer, Cham}},
-  author = {Juarez, Marc and Imani, Mohsen and Perry, Mike and Diaz, Claudia and Wright, Matthew},
-  urldate = {2017-02-04},
-  date = {2016-09-26},
-  pages = {27--46},
-  doi = {10.1007/978-3-319-45744-4_2}
+@online{centerforhistoryandnewmediazotero,
+  title = {Zotero {{Quick Start Guide}}},
+  url = {http://zotero.org/support/quick_start_guide},
+  timestamp = {2017-02-25T06:54:25Z},
+  author = {{Center for History and New Media}}
+}
+
+@inproceedings{stegeman2014empirically,
+  title = {Towards an Empirically Validated Model for Assessment of Code Quality},
+  url = {http://dl.acm.org/citation.cfm?id=2674702},
+  timestamp = {2014-12-05T11:32:56Z},
+  booktitle = {Proceedings of the 14th {{Koli Calling International Conference}} on {{Computing Education Research}}},
+  publisher = {{ACM}},
+  author = {Stegeman, Martijn and Barendsen, Erik and Smetsers, Sjaak},
+  urldate = {2014-11-24},
+  date = {2014},
+  pages = {99--108}
+}
+
+@article{obrien2009empirically,
+  title = {An Empirically Based Tool for Analyzing Mortality Associated with Congenital Heart~Surgery},
+  volume = {138},
+  issn = {0022-5223},
+  url = {http://www.sciencedirect.com/science/article/pii/S0022522309010174},
+  doi = {10.1016/j.jtcvs.2009.03.071},
+  abstract = {Objective
+Analysis of congenital heart surgery results requires a reliable method of estimating the risk of adverse outcomes. Two major systems in current use are based on projections of risk or complexity that were predominantly subjectively derived. Our goal was to create an objective, empirically based index that can be used to identify the statistically estimated risk of in-hospital mortality by procedure and to group procedures into risk categories.
+Methods
+Mortality risk was estimated for 148 types of operative procedures using data from 77,294 operations entered into the European Association for Cardiothoracic Surgery (EACTS) Congenital Heart Surgery Database (33,360 operations) and the Society of Thoracic Surgeons (STS) Congenital Heart Surgery Database (43,934 patients) between 2002 and 2007. Procedure-specific mortality rate estimates were calculated using a Bayesian model that adjusted for small denominators. Each procedure was assigned a numeric score (the STS–EACTS Congenital Heart Surgery Mortality Score [2009]) ranging from 0.1 to 5.0 based on the estimated mortality rate. Procedures were also sorted by increasing risk and grouped into 5 categories (the STS–EACTS Congenital Heart Surgery Mortality Categories [2009]) that were chosen to be optimal with respect to minimizing within-category variation and maximizing between-category variation. Model performance was subsequently assessed in an independent validation sample (n = 27,700) and compared with 2 existing methods: Risk Adjustment for Congenital Heart Surgery (RACHS-1) categories and Aristotle Basis Complexity scores.
+Results
+Estimated mortality rates ranged across procedure types from 0.3\% (atrial septal defect repair with patch) to 29.8\% (truncus plus interrupted aortic arch repair). The proposed STS–EACTS score and STS–EACTS categories demonstrated good discrimination for predicting mortality in the validation sample (C-index = 0.784 and 0.773, respectively). For procedures with more than 40 occurrences, the Pearson correlation coefficient between a procedure's STS–EACTS score and its actual mortality rate in the validation sample was 0.80. In the subset of procedures for which RACHS-1 and Aristotle Basic Complexity scores are defined, discrimination was highest for the STS–EACTS score (C-index = 0.787), followed by STS–EACTS categories (C-index = 0.778), RACHS-1 categories (C-index = 0.745), and Aristotle Basic Complexity scores (C-index = 0.687). When patient covariates were added to each model, the C-index improved: STS–EACTS score (C-index = 0.816), STS–EACTS categories (C-index = 0.812), RACHS-1 categories (C-index = 0.802), and Aristotle Basic Complexity scores (C-index = 0.795).
+Conclusion
+The proposed risk scores and categories have a high degree of discrimination for predicting mortality and represent an improvement over existing consensus-based methods. Risk models incorporating these measures may be used to compare mortality outcomes across institutions with differing case mixes.},
+  timestamp = {2014-12-05T11:41:12Z},
+  number = {5},
+  journaltitle = {The Journal of Thoracic and Cardiovascular Surgery},
+  shortjournal = {The Journal of Thoracic and Cardiovascular Surgery},
+  author = {O'Brien, Sean M. and Clarke, David R. and Jacobs, Jeffrey P. and Jacobs, Marshall L. and Lacour-Gayet, Francois G. and Pizarro, Christian and Welke, Karl F. and Maruszewski, Bohdan and Tobota, Zdzislaw and Miller, Weldon J. and Hamilton, Leslie and Peterson, Eric D. and Mavroudis, Constantine and Edwards, Fred H.},
+  urldate = {2014-12-05},
+  date = {2009-11},
+  pages = {1139--1153},
+  file = {ScienceDirect Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/HU243HM3/O'Brien et al. - 2009 - An empirically based tool for analyzing mortality .pdf:application/pdf;ScienceDirect Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/CPJME92S/S0022522309010174.html:text/html}
+}
+
+@article{hirschfeld2008context-oriented,
+  title = {Context-Oriented {{Programming}}},
+  volume = {7},
+  issn = {1660-1769},
+  url = {http://www.jot.fm/contents/issue_2008_03/article4.html},
+  doi = {10.5381/jot.2008.7.3.a4},
+  timestamp = {2015-09-18T08:34:00Z},
+  number = {3},
+  journaltitle = {Journal of Object Technology},
+  author = {Hirschfeld, Robert and Costanza, Pascal and Nierstrasz, Oscar},
+  date = {2008-03},
+  pages = {125--151},
+  file = {article4.pdf:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/HEBTNNBD/article4.pdf:application/pdf},
+  groups = {Academic Writing}
+}
+
+@inproceedings{keays2003context-oriented,
+  location = {{New York, NY, USA}},
+  title = {Context-Oriented {{Programming}}},
+  isbn = {1-58113-767-2},
+  url = {http://doi.acm.org/10.1145/940923.940926},
+  doi = {10.1145/940923.940926},
+  timestamp = {2015-10-25T15:07:35Z},
+  booktitle = {Proceedings of the 3rd {{ACM International Workshop}} on {{Data Engineering}} for {{Wireless}} and {{Mobile Access}}},
+  series = {MobiDe '03},
+  publisher = {{ACM}},
+  author = {Keays, Roger and Rakotonirainy, Andry},
+  date = {2003},
+  pages = {9--16},
+  keywords = {context,context-oriented programming,mobile,pervasive,programming,ubiquitous},
+  file = {p9-keays.pdf:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/WD54DEKE/p9-keays.pdf:application/pdf},
+  groups = {Academic Writing}
+}
+
+@inproceedings{hirschfeld2013l:,
+  location = {{New York, NY, USA}},
+  title = {L: {{Context}}-Oriented {{Programming}} with {{Only Layers}}},
+  isbn = {978-1-4503-2040-5},
+  url = {http://doi.acm.org/10.1145/2489793.2489797},
+  doi = {10.1145/2489793.2489797},
+  timestamp = {2015-10-25T15:07:48Z},
+  booktitle = {Proceedings of the 5th {{International Workshop}} on {{Context}}-{{Oriented Programming}}},
+  series = {COP'13},
+  publisher = {{ACM}},
+  author = {Hirschfeld, Robert and Masuhara, Hidehiko and Igarashi, Atsushi},
+  date = {2013},
+  pages = {4:1--4:5},
+  keywords = {context-oriented programming,layers,modularity,sideways composition,software composition},
+  file = {a4-hirschfeld.pdf:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/74IEG3GZ/a4-hirschfeld.pdf:application/pdf},
+  groups = {Academic Writing}
+}
+
+@inproceedings{ubayashi2013archface4cop,
+  location = {{New York, NY, USA}},
+  title = {{{Archface4COP}}: {{Architectural Interface}} for {{Context}}-Oriented {{Programming}}},
+  isbn = {978-1-4503-2040-5},
+  url = {http://doi.acm.org/10.1145/2489793.2489794},
+  doi = {10.1145/2489793.2489794},
+  timestamp = {2015-10-25T15:08:13Z},
+  booktitle = {Proceedings of the 5th {{International Workshop}} on {{Context}}-{{Oriented Programming}}},
+  series = {COP'13},
+  publisher = {{ACM}},
+  author = {Ubayashi, Naoyasu and Di, Ai and Kamei, Yasutaka},
+  date = {2013},
+  pages = {1:1--1:6},
+  keywords = {architecture,context-oriented programming,interface},
+  file = {a1-ubayashi.pdf:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/3QSAWDD8/a1-ubayashi.pdf:application/pdf},
+  groups = {Academic Writing}
+}
+
+@incollection{blackwell2001cognitive,
+  title = {Cognitive Dimensions of Notations: {{Design}} Tools for Cognitive Technology},
+  url = {http://link.springer.com/chapter/10.1007/3-540-44617-6_31},
+  shorttitle = {Cognitive Dimensions of Notations},
+  timestamp = {2016-01-09T12:29:52Z},
+  booktitle = {Cognitive {{Technology}}: {{Instruments}} of {{Mind}}},
+  publisher = {{Springer}},
+  author = {Blackwell, Alan F. and Britton, Carol and Cox, A. and Green, Thomas RG and Gurr, Corin and Kadoda, Gada and Kutar, M. S. and Loomes, Martin and Nehaniv, Chrystopher L. and Petre, Marian and {others}},
+  urldate = {2016-01-09},
+  date = {2001},
+  pages = {325--341},
+  file = {Cognitive_Dimensions_of_Notations_Design_Tools_for_Cognitive_Technology.pdf:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/46W2GF36/Cognitive_Dimensions_of_Notations_Design_Tools_for_Cognitive_Technology.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/GUK4GED4/3-540-44617-6_31.html:text/html}
+}
+
+@book{steele2010beautiful,
+  title = {Beautiful Visualization: Looking at Data through the Eyes of Experts},
+  url = {https://books.google.nl/books?hl=en&lr=&id=TKh6fdlKwfMC&oi=fnd&pg=PR5&dq=Beautiful+Visualization+-+Looking+at+Data+Through+the+Eyes+of+Experts&ots=cWPEQ-JTmB&sig=DkmrMSYy8KQ2zvl4K8gBCi_3OdQ},
+  shorttitle = {Beautiful Visualization},
+  timestamp = {2016-01-09T12:37:45Z},
+  publisher = {{" O'Reilly Media, Inc."}},
+  author = {Steele, Julie and Iliinsky, Noah},
+  urldate = {2016-01-09},
+  date = {2010},
+  file = {Beautiful.Visualization.pdf:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/N4IPUZ2Q/Beautiful.Visualization.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/AB7WGERZ/books.html:text/html},
+  groups = {Software Evolution}
+}
+
+@book{tufte1983visual,
+  title = {The Visual Display of Quantitative Information},
+  volume = {2},
+  url = {http://www.colorado.edu/UCB/AcademicAffairs/ArtsSciences/geography/foote/maps/assign/reading/TufteCoversheet.pdf},
+  timestamp = {2016-01-24T13:13:28Z},
+  number = {9},
+  publisher = {{Graphics press Cheshire, CT}},
+  author = {Tufte, Edward R. and Graves-Morris, P. R.},
+  urldate = {2016-01-24},
+  date = {1983},
+  file = {[PDF] from colorado.edu:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/DS9DSCQW/Tufte and Graves-Morris - 1983 - The visual display of quantitative information.pdf:application/pdf}
+}
+
+@inproceedings{palomba2014they,
+  title = {Do {{They Really Smell Bad}}? {{A Study}} on {{Developers}}' {{Perception}} of {{Bad Code Smells}}},
+  url = {http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6976076},
+  shorttitle = {Do {{They Really Smell Bad}}?},
+  timestamp = {2016-01-30T12:32:24Z},
+  booktitle = {Software {{Maintenance}} and {{Evolution}} ({{ICSME}}), 2014 {{IEEE International Conference}} On},
+  publisher = {{IEEE}},
+  author = {Palomba, Fabio and Bavota, Gabriele and Di Penta, Massimiliano and Oliveto, Rocco and De Lucia, Andrea},
+  urldate = {2016-01-30},
+  date = {2014},
+  pages = {101--110},
+  file = {[PDF] from unimol.it:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/NI85QVDG/Palomba et al. - 2014 - Do They Really Smell Bad A Study on Developers' P.pdf:application/pdf},
+  groups = {Research Preparation}
+}
+
+@inproceedings{potdar2014exploratory,
+  title = {An {{Exploratory Study}} on {{Self}}-{{Admitted Technical Debt}}},
+  url = {http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6976075},
+  timestamp = {2016-01-30T12:34:22Z},
+  booktitle = {Software {{Maintenance}} and {{Evolution}} ({{ICSME}}), 2014 {{IEEE International Conference}} On},
+  publisher = {{IEEE}},
+  author = {Potdar, Aniket and Shihab, Emad},
+  urldate = {2016-01-30},
+  date = {2014},
+  pages = {91--100},
+  file = {6146a091.pdf:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/Q9HJ8W4B/6146a091.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/4WZXUJPV/login.html:text/html},
+  groups = {Research Preparation}
 }
 
 @inproceedings{baumann2016disguised,
@@ -25,6 +193,7 @@
   urldate = {2017-02-04},
   date = {2016},
   pages = {37--46},
+  file = {[PDF] datenzone.de:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/H8I8PC27/Baumann et al. - 2016 - Disguised Chromium Browser Robust Browser, Flash .pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/3ZNVZ3U9/citation.html:text/html},
   groups = {Fingerprint}
 }
 
@@ -39,6 +208,7 @@
   urldate = {2017-02-04},
   date = {2016},
   pages = {1388--1401},
+  file = {[PDF] ftc.gov:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/W7865ZKU/Englehardt and Narayanan - 2016 - Online tracking A 1-million-site measurement and .pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/2IAT7H52/citation.html:text/html},
   groups = {Fingerprint}
 }
 
@@ -52,7 +222,9 @@
   author = {Torres, Christof Ferreira and Jonker, Hugo and Mauw, Sjouke},
   urldate = {2017-02-04},
   date = {2015},
-  pages = {3--19}
+  pages = {3--19},
+  file = {[PDF] uni.lu:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/5CFHKKDW/Torres et al. - 2015 - FP-Block usable web privacy by controlling browse.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/823M27KJ/978-3-319-24177-7_1.html:text/html},
+  groups = {Fingerprint}
 }
 
 @inproceedings{vissers2014crying,
@@ -64,7 +236,75 @@
   author = {Vissers, Thomas and Nikiforakis, Nick and Bielova, Nataliia and Joosen, Wouter},
   urldate = {2017-02-10},
   date = {2014},
+  file = {[PDF] inria.fr:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/6C4SKNPP/Vissers et al. - 2014 - Crying wolf on the price discrimination of online.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/T7QMFJK9/hal-01081034.html:text/html},
   groups = {Fingerprint}
 }
 
+@inproceedings{juarez2016efficient,
+  title = {Toward an {{Efficient Website Fingerprinting Defense}}},
+  url = {http://link.springer.com.ezproxy.elib10.ub.unimaas.nl/chapter/10.1007/978-3-319-45744-4_2},
+  eventtitle = {European Symposium on Research in Computer Security},
+  timestamp = {2017-02-24T11:24:27Z},
+  langid = {english},
+  booktitle = {Computer {{Security}} – {{ESORICS}} 2016},
+  publisher = {{Springer, Cham}},
+  author = {Juarez, Marc and Imani, Mohsen and Perry, Mike and Diaz, Claudia and Wright, Matthew},
+  urldate = {2017-02-04},
+  date = {2016-09-26},
+  pages = {27--46},
+  file = {Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/JJUEERQ7/Juarez et al. - 2016 - Toward an Efficient Website Fingerprinting Defense.pdf:application/pdf;Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/6J8EAQPC/10.html:text/html},
+  groups = {Fingerprint},
+  doi = {10.1007/978-3-319-45744-4_2}
+}
+
+@article{sood2011malvertising,
+  title = {Malvertising – Exploiting Web Advertising},
+  volume = {2011},
+  issn = {1361-3723},
+  url = {http://www.sciencedirect.com/science/article/pii/S1361372311700410},
+  doi = {10.1016/S1361-3723(11)70041-0},
+  abstract = {Online advertisements provide a convenient platform for spreading malware. Since ads provide a significant portion of revenue on the web, significant effort is put into attracting users to them. Malicious agents take advantage of this skillful attraction and then redirect users to malicious sites that serve malware.
+Advertisers use Web 2.0 functionality to provide flexibility and portability in sharing third-party content across different networks, websites and blogs. They use widgets, frames and Javascript banners in order to load and execute content from ad servers into user websites. But attackers can take advantage of flaws in features such as widgets and iframes to redirect browsers to malicious websites that deliver malware.
+To appreciate the severity and prevalence of this class of attack, the Open Web Application Security Project (OWASP.org) recently placed invalidated redirects and forwards in its ‘2010 top 10’ list. Aditya Sood and Richard Enbody of Michigan State University discuss the exploitation model of malvertisements and the way different modes of attacks are used to infect users.},
+  timestamp = {2017-02-25T09:53:34Z},
+  number = {4},
+  journaltitle = {Computer Fraud \& Security},
+  shortjournal = {Computer Fraud \& Security},
+  author = {Sood, Aditya K and Enbody, Richard J},
+  urldate = {2017-02-25},
+  date = {2011-04},
+  pages = {11--16},
+  file = {ScienceDirect Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/7RCWNJD7/Sood and Enbody - 2011 - Malvertising – exploiting web advertising.pdf:application/pdf;ScienceDirect Snapshot:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/HHKH9EE8/S1361372311700410.html:text/html},
+  groups = {Fingerprint}
+}
+
+@inproceedings{li2012knowing,
+  location = {{New York, NY, USA}},
+  title = {Knowing {{Your Enemy}}: {{Understanding}} and {{Detecting Malicious Web Advertising}}},
+  isbn = {978-1-4503-1651-4},
+  url = {http://doi.acm.org/10.1145/2382196.2382267},
+  doi = {10.1145/2382196.2382267},
+  shorttitle = {Knowing {{Your Enemy}}},
+  abstract = {With the Internet becoming the dominant channel for marketing and promotion, online advertisements are also increasingly used for illegal purposes such as propagating malware, scamming, click frauds, etc. To understand the gravity of these malicious advertising activities, which we call malvertising, we perform a large-scale study through analyzing ad-related Web traces crawled over a three-month period. Our study reveals the rampancy of malvertising: hundreds of top ranking Web sites fell victims and leading ad networks such as DoubleClick were infiltrated. To mitigate this threat, we identify prominent features from malicious advertising nodes and their related content delivery paths, and leverage them to build a new detection system called MadTracer. MadTracer automatically generates detection rules and utilizes them to inspect advertisement delivery processes and detect malvertising activities. Our evaluation shows that MadTracer was capable of capturing a large number of malvertising cases, 15 times as many as Google Safe Browsing and Microsoft Forefront did together, at a low false detection rate. It also detected new attacks, including a type of click-fraud attack that has never been reported before.},
+  timestamp = {2017-02-25T10:50:02Z},
+  booktitle = {Proceedings of the 2012 {{ACM Conference}} on {{Computer}} and {{Communications Security}}},
+  series = {CCS '12},
+  publisher = {{ACM}},
+  author = {Li, Zhou and Zhang, Kehuan and Xie, Yinglian and Yu, Fang and Wang, XiaoFeng},
+  urldate = {2017-02-25},
+  date = {2012},
+  pages = {674--686},
+  keywords = {malvertising,online advertising,statistical learning},
+  file = {ACM Full Text PDF:/home/boris/.mozilla/firefox/gxakh0f8.default/zotero/storage/7G4JWQ4X/Li et al. - 2012 - Knowing Your Enemy Understanding and Detecting Ma.pdf:application/pdf},
+  groups = {Fingerprint}
+}
+
+@comment{jabref-meta: databaseType:biblatex;}
+@comment{jabref-meta: groupstree:
+0 AllEntriesGroup:;
+1 ExplicitGroup:Academic Writing\;0\;;
+1 ExplicitGroup:Fingerprint\;0\;;
+1 ExplicitGroup:Research Preparation\;0\;;
+1 ExplicitGroup:Software Evolution\;0\;;
+}
 
