--- a/content/content.tex
+++ b/content/content.tex
@@ -53,3 +53,7 @@ by any of the airlines included in the study.
 Would malvertisement be mainly directed toward
 fingerprints conaining certain characteristics
 indicating they would be more vulnerable to an attack?
+It already seems that attackers have a preference
+for the Internet Explorer browser
+when targeting malvertisement.
+\citep{li2012knowing}
