Switched to ACM styling of document, with a two column layout.

--- a/front-back/title.tex
+++ b/front-back/title.tex
@@ -1,15 +1,17 @@
 \title{Fingerprint -- Preparation}
+\numberofauthors{1} %  in this sample file, there are a *total*
 \author{
+  \alignauthor
   Boris Arkenaar\\
-  Naarden, the Netherlands, 850657210\\
-  b.arkenaar@studie.ou.nl\\
-  \\
+  \affaddr{Naarden, the Netherlands, 850657210}\\
+  \email{b.arkenaar@studie.ou.nl}\\
+%  \\
   Tutor: Hugo Jonker\\
   Secondary Tutor: Gergely Alpar\\
   Examiner: Gergely Alpar\\
-  \\
+%  \\
   IM0502 -- Voorbereiden Afstuderen -- Master Software Engineering\\
-  Open Universiteit Nederland,\\
-  faculteit Management, Science \& Technology}
+  \affaddr{Open Universiteit Nederland},\\
+  \affaddr{faculteit Management, Science \& Technology}}
 \date{\today\\v0.2}
 \maketitle
