--- a/content/content.tex
+++ b/content/content.tex
@@ -8,10 +8,10 @@ The act of fingerprinting uses the fingerprint
 to track a specific user
 and possibly serve specific content to that user
 based on the tracking data.
-When we have control over the fingerprint the web server \emph{sees}
+When we have control over the fingerprint the web server \textit{sees}
 when we visit a website,
 we can study if and how the content of that website changes
-based on differences in the fingerprint we \emph{serve}.
+based on differences in the fingerprint we \textit{serve}.
 
 \section{Controlling the fingerprint}
 
@@ -26,12 +26,12 @@ but the resulting fingerprint
 should be a plausible combination of characteristics.
 
 Baumann et al. use correct fingerprints to replace the original one.
-\citep{baumann2016disguised}
+\cite{baumann2016disguised}
 They do this by storing the fingerprints
 of every user of their created browser
-on a server and using these \emph{real} fingerprints to substitute others.
+on a server and using these \textit{real} fingerprints to substitute others.
 With FP-Block fingerprints are really generated.
-\citep{torres2015fp-block:}
+\cite{torres2015fp-block:}
 By making use of Markov chains they make sure
 that each generated fingerprint is a plausible one.
 
@@ -46,14 +46,14 @@ how the price differs and based on which values of a fingerprint.
 A similar study has been performed recently however,
 with the conclusion that no price discrimination was being applied
 by any of the airlines included in the study.
-\citep{vissers2014crying}
+\cite{vissers2014crying}
 
 \subsection{Malvertisement}
 
 Would malvertisement be mainly directed toward
-fingerprints conaining certain characteristics
+fingerprints containing certain characteristics
 indicating they would be more vulnerable to an attack?
 It already seems that attackers have a preference
 for the Internet Explorer browser
 when targeting malvertisement.
-\citep{li2012knowing}
+\cite{li2012knowing}
