Added A/B testing, fingerprint generator and Facebook ads as possible research areas.

--- a/content/content.tex
+++ b/content/content.tex
@@ -57,3 +57,41 @@ It already seems that attackers have a preference
 for the Internet Explorer browser
 when targeting malvertisement.
 \cite{li2012knowing}
+
+\subsection{A/B testing}
+Websites make use of A/B testing to figure out the impact
+of two different approaches to a change
+in their design, usability of functionality.
+It would be interesting to see if some A/B test
+is being based on the fingerprint of the visitor.
+The fingerprint might be used to determine
+if the visitor at hand will be included in the A/B test
+or that he will be presented the \textit{normal} version of the website.
+In case the visitor is included in the test
+the fingerprint might be used to determine which version of the change,
+the A or the B version, will be presented.
+Although that might skew the results of the A/B test,
+since it is much more than simply an A/B test that way.
+
+\subsection{Fingerprint generator}
+A more theoretical approach is to make a study on what a fingerprint exists of.
+What are all the possible properties and their values,
+What are plausible combinations of these values
+and how can these be generated?
+Important as well is to find out the best way
+to keep this generator up to date.
+Since browsers, the web and fingerprinters keep evolving
+it must be possible to add, remove and update
+the fingerprint properties, values and their combinations,
+in order for this generator to keep being useful.
+
+\subsection{Whatsapp/Facebook interaction on advertisement}
+Whatsapp supposedly encrypts your chats end to end
+and as such should no be able to read along.
+After clicking a link in a Whatsapp chat, however,
+Advertisements about that same link pop up on Facebook.
+Is Facebook still able to read along with your chats
+and serve you ads based on you chat history?
+Or is Facebook \textit{simply} making use of your fingerprint
+when you visit the link from the chat in your browser,
+and serve you ads based on your browsing history?
